var dumper +exo slug

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,7 @@
             "App\\": "src/"
         }
     },
-    "require": {}
+    "require-dev": {
+        "symfony/var-dumper": "^5.3"
+    }
 }
