--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,9 @@
     },
     "require-dev": {
         "symfony/var-dumper": "^5.3"
+    },
+    "require": {
+        "cocur/slugify": "^4.0",
+        "ramsey/uuid": "^4.1"
     }
 }
