--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "cocur/slugify": "^4.0",
         "ramsey/uuid": "^4.1",
-        "symfony/filesystem": "^5.3"
+        "symfony/filesystem": "^5.3",
+        "symfony/http-client": "^5.3"
     }
 }
