--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "cocur/slugify": "^4.0",
         "ramsey/uuid": "^4.1",
         "symfony/filesystem": "^5.3",
-        "symfony/http-client": "^5.3"
+        "symfony/http-client": "^5.3",
+        "twig/twig": "^3.0"
     }
 }
